

                        Kiji Hive Adapter Release Notes

Version 0.9.1
  * KIJIHIVE-43. Fixed an issue where data requests were not being properly
      serialized when multiple tables were used in one query(joins).

Version 0.9.0
  * KIJIHIVE-40. Escape all column names to avoid Hive reserved words in DDL
      statement generation.
  * KIJIHIVE-34. Added support for qualifier and cell level paging.  See
      README.md for usage.

Version 0.7.1
  * KIJIHIVE-40. Escape all inferred class names from complex types to avoid
      Hive reserved words in DDL statement generation.
  * Fixed misconfiguration where intermediate results were not persisted in a
      usable location for subsequent jobs.

Version 0.7.0
  * KIJIHIVE-35. Fixed an NPE when fetching a non-primitive value from a map
      type family.
  * KIJIHIVE-2. Improved the generation of CREATE EXTERNAL TABLE statements.
      Complex data types should now be supported, and this functionality can be
      invoked as part of the kiji CLI tool, or via the bento-hive.sh script.
  * KIJIHIVE-39. Force user classes to take precedence in MapReduce jobs
      created from within Hive.

Version 0.6.0
  * KIJIHIVE-33. Fixed a ClassCastException issue when reading from a
      SpecificRecord.  Thanks Scott!
  * KIJIHIVE-32. Added support for reading Avro enumerations as Strings.

Version 0.5.0
  * KIJIHIVE-29. Updated KijiTableInputFormat to use Kiji interfaces for
      determining split information.
  * KIJIHIVE-20. Kiji Hive Adapter now supports writing of primitive types.
      Any tables that already exist in the Hive metastore need to be recreated
      in order to take advantage of the new classes.  See README.md for more
      details.

Version 0.4.1
  * KIJIHIVE-26. Default to HBaseRowKey when EntityId components aren't present.

Version 0.4.0
  * KIJIHIVE-23. Updates to Kiji Hive Adapter to become compatible with 
      KijiSchema 1.1.x.